--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <meta name="msapplication-navbutton-color" content="#000000">
         <meta name="description" content="Re-Find">
         <meta name="start_url" content="/index.html">
-        <meta content="Re-Find - The Most Findable Search Engine" property="og:title" />
-        <meta content="Re-Find is the most findable search engine" property="og:description" />
-        <meta content="https://www.re-find.net" property="og:url" />
-        <meta content="/@Extras/reupmini.png" property="og:image" />
+        <meta content="Re-Find Logged" property="og:title" />
+        <meta content="Re-Find Logged -  The version of Re-Find which logs your searches to your history." property="og:description" />
+        <meta content="https://logged.re-find.net" property="og:url" />
+        <meta content="https://github.com/purploided/Re-Find/blob/main/@Extras/reupmini.png?raw=true" property="og:image" />
         <script async src="https://cse.google.com/cse.js?cx=f28d81b2aaa164fbf"></script>
     </head>
     <body class="body" id="body">
